--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,29 @@
 Package: atacCNV
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Calling copy numbers from scATAC-seq data
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Akshaya Ramakrishnan
+Maintainer: The package maintainer <akshaya4r@gmail.com>
+Description: Package to detect breakpoints and assign somies to scATAC-seq data.
+    Also supports other single cell sequencing data.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Suggests: 
+    testthat
+Imports: 
+    GenomicAlignments (>= 1.22.1),
+    Matrix (>= 1.2.18),
+    SummarizedExperiment (>= 1.16.1),
+    data.table (>= 1.12.8),
+    plyranges (>= 1.6.10),
+    Rsamtools (>= 2.2.1),
+    GenomeInfoDb (>= 1.22.0),
+    BSgenome.Hsapiens.UCSC.hg38 (>= 1.4.1),
+    GenomicRanges (>= 1.38.0),
+    stats (>= 3.6.1),
+    Biostrings (>= 2.54.0),
+    magrittr (>= 1.5),
+    BiocGenerics (>= 0.32.0),
+    S4Vectors (>= 0.24.2)
