--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,13 @@ LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
     testthat
+Depends:
+    R (>= 3.5),
+    GenomicAlignments,
+    data.table,
+    plyranges,
+    Biostrings, 
+    S4Vectors
 Imports: 
     GenomicAlignments (>= 1.22.1),
     Matrix (>= 1.2.18),
