--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ import(Matrix)
 import(Rsamtools)
 import(S4Vectors)
 import(SummarizedExperiment)
+import(cowplot)
 import(data.table)
+import(ggplot2)
 import(magrittr)
 import(plyranges)
 import(stats)
