Read gzipped files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ import(GenomeInfoDb)
 import(GenomicFeatures)
 import(GenomicRanges)
 import(Matrix)
+import(R.utils)
 import(Rsamtools)
 import(S4Vectors)
 import(SummarizedExperiment)
